--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 
 
-        <svg class="w-8 md:hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-            stroke="currentColor" class="size-6">
+        <svg id="menuicon" class="w-8 md:hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+            stroke-width="1.5" stroke="currentColor" class="size-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
 
@@ -37,6 +37,27 @@
             </li>
         </ul>
     </nav>
+
+    <!-- side navbar -->
+    <section id="sidenav" class="bg-green-100 fixed z-20 top-0 transition-all duration-1000"
+        style="width: 50%; height: 100vh; right: -50%;">
+        <div class="text-right p-5">
+            <p id="closenav" class="inline cursor-pointer">X</p>
+        </div>
+        <ul class=" flex flex-col gap-10 items-center text-gray-600">
+
+            <li>
+                <a class="hover:underline" href="#">Home</a>
+            </li>
+            <li>
+                <a class="hover:underline " href="product.html">Products</a>
+            </li>
+            <li>
+                <a class="hover:underline text-black" href="contact.html">Contact</a>
+            </li>
+        </ul>
+
+    </section>
     <!-- Header section -->
     <section class="bg-green-100 p-4 md:p-10 pt-5 flex justify-center">
         <div>
@@ -116,26 +137,30 @@
         <div class="grid grid-cols-2 md:grid-cols-4 mt-5 gap-5 ">
 
             <div>
-                <img src="./images/bestseller_1.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2" alt="rose plant">
-                <h1>Rose plant</h1>
-                <p>$20</p>
-            </div>
-
-            <div >
-                <img src="./images/bestseller_2.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2" alt="rose plant">
+                <img src="./images/bestseller_1.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2"
+                    alt="rose plant">
                 <h1>Rose plant</h1>
                 <p>$20</p>
             </div>
 
             <div>
-                <img src="./images/bestseller_3.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2" alt="rose plant">
+                <img src="./images/bestseller_2.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2"
+                    alt="rose plant">
+                <h1>Rose plant</h1>
+                <p>$20</p>
+            </div>
+
+            <div>
+                <img src="./images/bestseller_3.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2"
+                    alt="rose plant">
 
                 <h1>Rose plant</h1>
                 <p>$20</p>
             </div>
 
             <div>
-                <img src="./images/bestseller_4.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2" alt="rose plant">
+                <img src="./images/bestseller_4.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2"
+                    alt="rose plant">
                 <h1>Rose plant</h1>
                 <p>$20</p>
             </div>
@@ -144,49 +169,58 @@
 
     <!-- customer review -->
     <section>
-    
-            <h1 class="text-center font-bold text-3xl mt-5">Customer Reviews</h1>
+
+        <h1 class="text-center font-bold text-3xl mt-5">Customer Reviews</h1>
         <div class="flex flex-col gap-5 justify-center text-white m-5">
             <div class="bg-green-900 p-5 container">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id quos, accusamus quam odit architecto recusandae eius eligendi cumque voluptas earum reprehenderit esse quae culpa laborum, pariatur optio debitis deleniti minus?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id quos, accusamus quam odit architecto
+                    recusandae eius eligendi cumque voluptas earum reprehenderit esse quae culpa laborum, pariatur optio
+                    debitis deleniti minus?</p>
                 <p class="font-bold text-yellow-300">Genny mathew </p>
 
             </div>
 
             <div class="bg-green-900 p-5 container">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id quos, accusamus quam odit architecto recusandae eius eligendi cumque voluptas earum reprehenderit esse quae culpa laborum, pariatur optio debitis deleniti minus?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id quos, accusamus quam odit architecto
+                    recusandae eius eligendi cumque voluptas earum reprehenderit esse quae culpa laborum, pariatur optio
+                    debitis deleniti minus?</p>
                 <p class="font-bold text-yellow-300">Kim</p>
 
             </div>
 
             <div class="bg-green-900 p-5 container">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id quos, accusamus quam odit architecto recusandae eius eligendi cumque voluptas earum reprehenderit esse quae culpa laborum, pariatur optio debitis deleniti minus?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id quos, accusamus quam odit architecto
+                    recusandae eius eligendi cumque voluptas earum reprehenderit esse quae culpa laborum, pariatur optio
+                    debitis deleniti minus?</p>
                 <p class="font-bold text-yellow-300">Peter</p>
 
             </div>
         </div>
 
 
-      </section>
+    </section>
 
-      <!-- News letter -->
-      <section class="text-center">
+    <!-- News letter -->
+    <section class="text-center">
         <h1 class="text-3xl font-bold mt-5 text-center">Join our News letter</h1>
         <p>Signup for our email newspaper to get exclusive discount updates, and more</p>
         <input class="border border-black p-2 m-3 " style="width: 80%;" type="text">
         <br>
         <button class="bg-black text-white p-3 m-1 underline">Subscribe</button>
 
-      </section>
+    </section>
 
-      <!-- footer -->
+    <!-- footer -->
 
-      <section class="bg-green-100 p-10 flex flex-col gap-5">
+    <section class="bg-green-100 p-10 flex flex-col gap-5">
         <h1 class="text-4xl font-bold">Greenden</h1>
-        <p>The standard Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque esse harum ipsa! Doloremque velit molestiae non facilis quis nulla labore?</p>
+        <p>The standard Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque esse harum ipsa! Doloremque
+            velit molestiae non facilis quis nulla labore?</p>
         <p>&copy;Greenden.com</p>
 
-      </section>
+    </section>
+
+    <script src="index.js"></script>
 
 </body>
 
