--- a/product.html
+++ b/product.html
@@ -17,8 +17,8 @@
 
 
 
-        <svg class="w-8 md:hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-            stroke="currentColor" class="size-6">
+        <svg id="menuicon" class="w-8 md:hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+            stroke-width="1.5" stroke="currentColor" class="size-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
 
@@ -38,14 +38,33 @@
         </ul>
     </nav>
 
-    <!-- products -->
+    <!-- side navbar -->
+    <section id="sidenav" class="bg-green-100 fixed z-20 top-0 transition-all duration-1000"
+        style="width: 50%; height: 100vh; right: -50%;">
+        <div class="text-right p-5">
+            <p id="closenav" class="inline cursor-pointer">X</p>
+        </div>
+        <ul class=" flex flex-col gap-10 items-center text-gray-600">
+
+            <li>
+                <a class="hover:underline" href="index.html">Home</a>
+            </li>
+            <li>
+                <a class="hover:underline " href="product.html">Products</a>
+            </li>
+            <li>
+                <a class="hover:underline text-black" href="contact.html">Contact</a>
+            </li>
+        </ul>
+
+    </section <!-- products -->
     <section>
         <section class="p-4 text-center">
             <h1 class="text-3xl font-bold mt-5">Our Products</h1>
-            <input type="text" placeholder="Search for a product...." class="border border-black p-2 mt-4"
+            <input id="search" type="text" placeholder="Search for a product...." class="border border-black p-2 mt-4"
                 style="width: 80%;">
 
-            <div class="grid grid-cols-2 md:grid-cols-4 mt-5 gap-5 ">
+            <div id="product-container" class="grid grid-cols-2 md:grid-cols-4 mt-5 gap-5 ">
 
                 <div>
                     <img src="./images/bestseller_1.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2"
@@ -57,7 +76,7 @@
                 <div>
                     <img src="./images/bestseller_2.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2"
                         alt="rose plant">
-                    <h1>Rose plant</h1>
+                    <h1>Ice Apple</h1>
                     <p>$20</p>
                 </div>
 
@@ -65,7 +84,7 @@
                     <img src="./images/bestseller_3.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2"
                         alt="rose plant">
 
-                    <h1>Rose plant</h1>
+                    <h1>White Rose</h1>
                     <p>$20</p>
                 </div>
 
@@ -73,7 +92,7 @@
                 <div>
                     <img src="./images/bestseller_4.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2"
                         alt="rose plant">
-                    <h1>Rose plant</h1>
+                    <h1>lotus flower</h1>
                     <p>$20</p>
                 </div>
 
@@ -81,7 +100,7 @@
                     <img src="./images/bestseller_5.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2"
                         alt="rose plant">
 
-                    <h1>Rose plant</h1>
+                    <h1>Aloevera plant</h1>
                     <p>$20</p>
                 </div>
 
@@ -89,7 +108,7 @@
                     <img src="./images/bestseller_6.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2"
                         alt="rose plant">
 
-                    <h1>Rose plant</h1>
+                    <h1>Banana</h1>
                     <p>$20</p>
                 </div>
 
@@ -97,7 +116,7 @@
                     <img src="./images/bestseller_7.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2"
                         alt="rose plant">
 
-                    <h1>Rose plant</h1>
+                    <h1>Hibiscus plant</h1>
                     <p>$20</p>
                 </div>
 
@@ -105,14 +124,14 @@
                     <img src="./images/bestseller_8.jpg" class="inline hover:shadow-xl transform hover:-translate-y-2"
                         alt="rose plant">
 
-                    <h1>Rose plant</h1>
+                    <h1>Money plant</h1>
                     <p>$20</p>
                 </div>
             </div>
         </section>
     </section>
 
-   
+
 
     <!-- footer -->
 
@@ -123,3 +142,4 @@
         <p>&copy;Greenden.com</p>
 
     </section>
+    <script src="product.js"></script>
