--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
         <div class="text-right p-5">
             <p id="closenav" class="inline cursor-pointer">X</p>
         </div>
-       
+
         <ul class=" flex flex-col gap-10 items-center text-gray-600">
 
             <li>
@@ -58,7 +58,8 @@
             </li>
         </ul>
 
-    </section <!-- contact -->
+    </section>
+    <!-- contact -->
     <section class="bg-white dark:bg-gray-900">
         <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
             <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white">Contact Us
@@ -105,3 +106,6 @@
 
     </section>
     <script src="contact.js"></script>
+</body>
+
+</html>
