--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <ul class=" flex flex-col gap-10 items-center text-gray-600">
 
             <li>
-                <a class="hover:underline" href="#">Home</a>
+                <a class="hover:underline" href="#">Homee</a>
             </li>
             <li>
                 <a class="hover:underline " href="product.html">Products</a>
