--- a/product.html
+++ b/product.html
@@ -57,7 +57,10 @@
             </li>
         </ul>
 
-    </section <!-- products -->
+    </section>
+
+    <!-- products -->
+
     <section>
         <section class="p-4 text-center">
             <h1 class="text-3xl font-bold mt-5">Our Products</h1>
@@ -143,3 +146,6 @@
 
     </section>
     <script src="product.js"></script>
+</body>
+
+</html>
